# sme_midterm_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fleet_management/share/fleet_management/: package.bash  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/fleet_management/: setup.py
src/fleet_management/action/: fleet_management.action
src/fleet_management/fleet_management/: fleet_management_cli.py  fleet_management_client_cli.py  fleet_management_logic.py
