<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_management</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shaxzodxaydarov257@gmail.com">shokhzod</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rclpy</build_depend>
  <build_depend>action_msgs</build_depend>  <!-- Add this for action generation -->
  <build_depend>std_msgs</build_depend>    <!-- Add other message dependencies here -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>action_msgs</exec_depend>    <!-- Add this for action generation -->
  <exec_depend>std_msgs</exec_depend> 

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
